# wgpu-renderer

./: Cargo.toml  README.md  a
src/: bind_group.rs  camera.rs  chunk.rs  main.rs  mesh.rs  model.rs  mouse_input.rs  shader.wgsl  texture.rs  uniform.rs  voxel.wgsl  world.rs
src/pipeline/: mod.rs  model_pipeline.rs  voxel_pipeline.rs
src/renderer/: mod.rs  model_renderer.rs  quad_renderer.rs  voxel_renderer.rs
