[package]
name = "wgpu-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cgmath = "0.18.0"
env_logger = "0.9.3"
image = { version = "0.24.5", features = ["png", "jpeg"] }
log = "0.4.17"
pollster = "0.2.5"
wgpu = { git = "https://github.com/gfx-rs/wgpu.git" }
winit = "0.27.5"
